Bug 1058685 - IonMonkey MIPS: Fix warnings and style in MIPS code. r=bbouvier