js/src/jit/mips/Assembler-mips.h
@@ -240,7 +240,7 @@ static const uint32_t FunctionMask = ((1 << FunctionBits) - 1) << FunctionShift;
 static const uint32_t RegMask = Registers::Total - 1;
 static const uint32_t StackAlignmentMask = StackAlignment - 1;
 
-static const int32_t MAX_BREAK_CODE = 1024 - 1;
+static const uint32_t MAX_BREAK_CODE = 1024 - 1;
 
 class Instruction;
 class InstReg;
